# avante_bedrock.nvim

./: Makefile  README.md
lib_reqsign_aws/: Cargo.toml
lib_reqsign_aws/src/: lib.rs
lib_reqsign_aws/tests/: claude35_test.lua  curl.lua  test.rs
lua/: reqsign_aws_lib.lua
lua/avante_bedrock/: init.lua  reqsign_aws.lua
