[package]
name = "lib_reqsign_aws"
version = "0.1.0"
authors = ["Hanchin Hsieh <me@yuchanns.xyz>"]
repository = "https://github.com/yuchanns/avante_bedrock.nvim"
edition = "2021"

[lib]
name = "lua_reqsign_aws"
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
http = { version = "1.1.0", default-features = false }
mlua = { version = "0.10.0-beta.1", features = ["luajit", "module"] }
reqsign = { version = "0.16.0", features = ["services-aws"] }
sha2 = "0.10.8"

[dev-dependencies]
anyhow = "1.0.86"
http = "1.1.0"
tokio = { version = "1.39.3", features = ["full"] }
reqwest = "0.12.5"
serde_json = "1.0.125"
glob = "0.3.1"

